# RP2040_Projects

./: README.md
buddhabox/: README.md  buddhabox.kicad_pcb  buddhabox.kicad_prl  buddhabox.kicad_pro  buddhabox.kicad_sch
buddhabox/hw/: buddhabox.kicad_pcb  buddhabox.kicad_prl  buddhabox.kicad_pro  buddhabox.kicad_sch
buddhabox/sw/: CMakeLists.txt  buddhabox.c  pcm_data.h  shriek_alu_raw.h  td_tangram1_raw.h  tdf_raw.h  tt_lwymi_raw.h
rp2040-dongle/: README.md  rp2040-dongle.kicad_pcb  rp2040-dongle.kicad_prl  rp2040-dongle.kicad_pro  rp2040-dongle.kicad_sch
